# cerebrum

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
data/: download.py  real_connectome_data.py  varshney_connectome.py
docs/: ablation_results.md  architecture.md  neuroscience_background.md
experiments/results/: ablation_all_results.json  ablation_neuron_AIY.json  ablation_neuron_AIZ.json  ablation_neuron_ASE.json  ablation_neuron_AVB.json  ablation_neuron_AWC.json  ablation_random_frac0_seed123.json  ablation_random_frac0_seed42.json  ablation_random_frac0_seed456.json  ablation_random_frac10_seed123.json  ablation_random_frac10_seed42.json  ablation_random_frac10_seed456.json  ablation_random_frac25_seed123.json  ablation_random_frac25_seed42.json  ablation_random_frac25_seed456.json  ablation_random_frac50_seed123.json  ablation_random_frac50_seed42.json  ablation_random_frac50_seed456.json  ablation_table.md  episode_1773849448_summary.json  episode_1773849448_trajectory.npy  episode_1773849501_summary.json  episode_1773849501_trajectory.npy  episode_1773849518_summary.json  episode_1773849520_summary.json  episode_1773849522_summary.json  episode_1773849522_trajectory.npy  episode_1773849525_summary.json  episode_1773849527_summary.json  episode_1773849527_trajectory.npy  episode_1773849529_summary.json  episode_1773849529_trajectory.npy  episode_1773849532_summary.json  (+92 more)
notebooks/: 01_connectome_exploration.ipynb
scripts/: run_ablation.py  run_live.py  run_simulation.py  run_validation.py  train.py
server/: __init__.py  websocket_server.py
tests/: conftest.py  run_tests.py  test_ablation.py  test_adex.py  test_connectome.py  test_enhancements.py  test_environment.py  test_gnn_model.py  test_lif_neurons.py  test_simulation.py  test_stdp.py
(+22 files in other folders)
