[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "celegans-emulator"
version = "0.1.0"
description = "C. elegans connectome emulator with GNN + LIF neuron dynamics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["neuroscience", "connectome", "GNN", "spiking neural networks", "C. elegans"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests", "scripts"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/celegans --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/celegans"]
omit = ["*/tests/*", "*/__init__.py"]
